--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,13 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["./src/components/*"],
+      "@screens/*": ["./src/screens/*"],
+      "@firebase/*": ["./src/firebase/*"],
+      "@assets/*": ["./assets/*"]
+    }
   }
 }
