--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "paths": {
       "@components/*": ["./src/components/*"],
       "@screens/*": ["./src/screens/*"],
-      "@firebase/*": ["./src/firebase/*"],
+      "@lib/*": ["src/lib/*"],
       "@assets/*": ["./assets/*"]
     }
   }
