--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "expo": "~38.0.8",
+    "expo-google-app-auth": "^8.1.2",
+    "expo-google-sign-in": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
+    "formik": "^2.1.4",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-dotenv": "^2.2.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
