--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
   },
@@ -33,6 +34,7 @@
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/styled-components": "^5.1.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "typescript": "~3.9.5"
